--- a/galeria.html
+++ b/galeria.html
@@ -159,7 +159,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="023">
-      <button class="cartaejemplo" data-style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-23"></button>
+      <button class="cartaejemplo" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-23"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="024">
