--- a/info.html
+++ b/info.html
@@ -26,11 +26,14 @@
 
 
 
-      <div class="banner">
+<div class="infocontainer">
+
+  <div class="infobanner"></div>
 
 
 
-      </div>
+
+</div>
 
 
     </main>
