--- a/galeria.html
+++ b/galeria.html
@@ -213,8 +213,8 @@
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-34"></button>
       <div class="overlay-bloqueo overespecial"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-35"></button>
+    <div class="carta-wrapper" data-pass="035">
+      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
       <div class="overlay-bloqueo overespecial"></div>
     </div>
     <div class="carta-wrapper" data-pass="036">
@@ -244,198 +244,180 @@
 <!---------------------------------------------------------------CARTAS NORMALES-------------------------------------------------------------->  
 
 <!-------------------------------------001---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-1" >
+         <div class="carousel-item Cnormal" id="carousel-item-1" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------002---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-2" >
+         <div class="carousel-item Cnormal" id="carousel-item-2" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------003---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-3" >
+         <div class="carousel-item Cnormal" id="carousel-item-3" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/003_fondo.webp" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/003_sombra.webp"  />
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/003.webp" />                 
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------004---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-4" >
+         <div class="carousel-item Cnormal" id="carousel-item-4" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------005---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-5" >
+         <div class="carousel-item Cnormal" id="carousel-item-5" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/005_fondo.webp" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/005_sombra.webp"  />
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/005.webp" />                 
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------006---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-6" >
+         <div class="carousel-item Cnormal" id="carousel-item-6" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------007---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-7" >
+         <div class="carousel-item Cnormal" id="carousel-item-7" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------008---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-8" >
+         <div class="carousel-item Cnormal" id="carousel-item-8" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------009---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-9" >
+         <div class="carousel-item Cnormal" id="carousel-item-9" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------010---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-10" >
+         <div class="carousel-item Cnormal" id="carousel-item-10" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------011---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-11" >
+         <div class="carousel-item Cnormal" id="carousel-item-11" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------012---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-12" >
+         <div class="carousel-item Cnormal" id="carousel-item-12" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------013---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-13" >
+         <div class="carousel-item Cnormal" id="carousel-item-13" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------014---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-14" >
+         <div class="carousel-item Cnormal" id="carousel-item-14" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------015---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-15" >
+         <div class="carousel-item Cnormal" id="carousel-item-15" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------016---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-16" >
+         <div class="carousel-item Cnormal" id="carousel-item-16" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------017---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-17" >
+         <div class="carousel-item Cnormal" id="carousel-item-17" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
         </div>
 
         <!-------------------------------------018---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-18" >
+         <div class="carousel-item Cnormal" id="carousel-item-18" >
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle3">
+            <div class="carta frente" data-circle="circle4">
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
-              <img loading="lazy" class="sombra" src="assets/cartas/NORMALES/"  />
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -451,7 +433,7 @@
         <!---------------------------------------------------------------CARTAS RARAS-------------------------------------------------------------->  
 
 <!-------------------------------------019---------------------------------------->  
-         <div class="carousel-item" id="carousel-item-19" >
+         <div class="carousel-item Craro" id="carousel-item-19" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img loading="lazy" class="medio" src="assets/cartas/019/0019fondo.webp"; />                
@@ -485,7 +467,7 @@
 <!--------------------------------------020---------------------------------------> 
 
 
-        <div class="carousel-item" id="carousel-item-20" >
+        <div class="carousel-item Craro" id="carousel-item-20" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img loading="lazy" class="medio" src="assets/cartas/020/0020fondo.webp" />                
@@ -520,7 +502,7 @@
         </div>
 
 <!-------------------------------------021---------------------------------------->        
-        <div class="carousel-item" id="carousel-item-21" > 
+        <div class="carousel-item Craro" id="carousel-item-21" > 
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle5">
               <img loading="lazy" class="medio" src="assets/cartas/021/021fondo.webp" />  
@@ -556,7 +538,7 @@
 <!------------------------------------022-----------------------------------------> 
 
 
-        <div class="carousel-item" id="carousel-item-22">
+        <div class="carousel-item Craro" id="carousel-item-22">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle6 circle4">
               <img loading="lazy" class="medio" src="assets/cartas/022/022fondo.webp" />  
@@ -588,7 +570,7 @@
         </div>
 <!-------------------------------------023----------------------------------------> 
 
-         <div class="carousel-item" id="carousel-item-23">
+         <div class="carousel-item Craro" id="carousel-item-23">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <div class="fondo-rainbow" ></div>
@@ -619,7 +601,7 @@
 <!--------------------------------------024---------------------------------------> 
 
 
-        <div class="carousel-item" id="carousel-item-24">
+        <div class="carousel-item Craro" id="carousel-item-24">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
               <div class="fondo-rainbow"></div> 
@@ -653,7 +635,7 @@
         </div>
         <!--------------------------------025---------------------------------------------> 
        
-        <div class="carousel-item" id="carousel-item-25">
+        <div class="carousel-item Craro" id="carousel-item-25">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img loading="lazy" class="medio" src="assets/cartas/025/025fondo.webp"/>   
@@ -695,12 +677,12 @@
 
         <!---------------------------------------------------------------CARTAS DORADAS-------------------------------------------------------------->  
 
-<!-----------------------------------------036------------------------------------>
+        <!-----------------------------------------035------------------------------------>
 
-<div class="carousel-item" id="carousel-item-36">
+<div class="carousel-item Clegendario" id="carousel-item-35">
   <div class="tarjeta">
     <div class="carta frente" data-circle="circle5 circle4">
-      <div class="michi" style="background-color: rgb(153, 125, 0);"></div>
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
       <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(-80deg) scale(2);">
         <div class="line-container" style="justify-content: first baseline;" >
           <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 20px rgb(255, 221, 0);"></div>
@@ -717,7 +699,40 @@
         </div> 
         <div data-lazy="true" class="michi lazy-michi" data-style="
         z-index: 19;
-        background-image: url('/assets/cartas/050/050animacion.webp'); 
+        background-image: url('/assets/cartas/035/035_anim.webp'); 
+        animation: animacion 0.3s steps(4) forwards infinite;
+        background-size: 1368px 500px;
+    "></div> 
+
+    </div>
+    <div class="carta trasera"> </div>
+  </div>
+</div>
+<!-----------------------------------------------------------------------------> 
+
+<!-----------------------------------------036------------------------------------>
+
+<div class="carousel-item Clegendario" id="carousel-item-36">
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+      <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(-80deg) scale(2);">
+        <div class="line-container" style="justify-content: first baseline;" >
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 20px rgb(255, 221, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 20px rgb(255, 214, 65);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 25px 10px rgb(255, 166, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 10px rgb(255, 204, 0);"></div>
+        </div>
+        <div class="line-container" style="justify-content: end;">
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 10px rgb(157, 125, 13);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 8px rgb(255, 213, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 15px rgb(255, 221, 52);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(174, 182, 19);"></div>
+        </div>
+        </div> 
+        <div data-lazy="true" class="michi lazy-michi" data-style="
+        z-index: 19;
+        background-image: url('/assets/cartas/036/036animacion.webp'); 
         animation: animacion 0.4s steps(4) forwards infinite;
         background-size: 1368px 500px;
     "></div> 
