--- a/galeria.html
+++ b/galeria.html
@@ -172,7 +172,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="026">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-26"></button>
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/026.webp);" data-target="carousel-item-26"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -661,6 +661,39 @@
             "></div>
                 <img loading="lazy" class="sombra" src="assets/cartas/025/025papel.webp"  />
                 <img loading="lazy" class="capaholograficaestrellas" src="assets/cartas/025/025holograma.webp" style="z-index: 18; opacity: 30%;" />
+
+            </div>
+            <div class="carta trasera"> </div>
+          </div>
+        </div>
+
+                <!--------------------------------026---------------------------------------------> 
+       
+        <div class="carousel-item Craro" id="carousel-item-26">
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle2">
+              <img loading="lazy" class="medio" src="assets/cartas/026/026_fondo.webp"/ style="filter: brightness(1);">   
+              <div class="efectoholograficolineas" style="z-index: 9; transform: rotate(-25deg) scale(2); filter: opacity(60%);">
+                <div class="line-container" style="justify-content: first baseline;" >
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                </div>
+                <div class="line-container" style="justify-content: end;">
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                </div>
+                </div>       
+                <div data-lazy="true" class="michi lazy-michi" data-style="
+                z-index: 16;
+                background-image: url('/assets/cartas/026/026_animacion_02.webp'); 
+                animation: animacion 0.4s steps(4) forwards infinite;
+                background-size: 1368px 500px;
+            "></div>
+                <img loading="lazy" class="sombra" src="assets/cartas/026/026_papel.webp"  />
 
             </div>
             <div class="carta trasera"> </div>
