--- a/galeria.html
+++ b/galeria.html
@@ -64,8 +64,8 @@
   <div class="expansion" style="background-image: url(./assets/logoprograma03.webp);"></div>
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-pass="">
-      <button  class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-1"></button>
+    <div class="carta-wrapper" data-pass="001">
+      <button  class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -100,8 +100,8 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-9"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-10"></button>
+    <div class="carta-wrapper" data-pass="010">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/010.webp);" data-target="carousel-item-10"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -247,7 +247,7 @@
          <div class="carousel-item Cnormal" id="carousel-item-1" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/001.webp" />                 
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -337,7 +337,7 @@
          <div class="carousel-item Cnormal" id="carousel-item-10" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/010.webp" />                 
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -690,7 +690,7 @@
                 <div data-lazy="true" class="michi lazy-michi" data-style="
                 z-index: 16;
                 background-image: url('/assets/cartas/026/026_animacion_02.webp'); 
-                animation: animacion 0.4s steps(4) forwards infinite;
+                animation: animacion 0.3s steps(4) forwards infinite;
                 background-size: 1368px 500px;
             "></div>
                 <img loading="lazy" class="sombra" src="assets/cartas/026/026_papel.webp"  />
