--- a/galeria.html
+++ b/galeria.html
@@ -68,8 +68,8 @@
       <button  class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-2"></button>
+    <div class="carta-wrapper" data-pass="002">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-2"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="003">
@@ -199,7 +199,7 @@
 
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
-      <div class="overlay-bloqueo overespecial"></div>
+      <div class="overlay-bloqueo overespecial"> </div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-32"></button>
@@ -215,7 +215,7 @@
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
-      <div class="overlay-bloqueo overespecial"></div>
+      <div class="overlay-bloqueo overespecial"> </div>
     </div>
     <div class="carta-wrapper" data-pass="036">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
@@ -257,7 +257,7 @@
          <div class="carousel-item Cnormal" id="carousel-item-2" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/002.webp" />                 
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -673,7 +673,7 @@
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img loading="lazy" class="medio" src="assets/cartas/026/026_fondo.webp"/ style="filter: brightness(1);">   
-              <div class="efectoholograficolineas" style="z-index: 9; transform: rotate(-25deg) scale(2); filter: opacity(60%);">
+              <div class="efectoholograficolineas" style="z-index: 9; transform: rotate(-55deg) scale(2); filter: opacity(60%);">
                 <div class="line-container" style="justify-content: first baseline;" >
                   <div class="line line-white"></div>
                   <div class="line line-white"></div>
