--- a/galeria.html
+++ b/galeria.html
@@ -50,6 +50,14 @@
 
 
 
+<!---------------------ESCANER QR --------------------------------------->
+
+
+  <button id="btn-abrir-escaner">Abrir escáner QR</button>
+
+  <div id="reader"></div>
+  <p id="resultado"></p>
+
 
 <!----------------------boton de codigo--------------------------------------->
 
@@ -781,26 +789,12 @@
 <!-----------------------------------------------------------------------------> 
       </div>
 
-
-
-
-      <!-----------------------------------------------------------------------------> 
-
     <DIV class="contenedorbotoncerrar">
   <a class="botonatras" onclick="abrirVentanaExpansiones()" style="background-image: url(./assets/expansiones.webp);"> EXPANSIONES </a>
       <a onclick="cerrarGaleriaDesdeIframe()" class="botonatras"> X </a>
-<button  id="escanerqr" class="botonatras escanerqr" style="background-image: url(./assets/info.webp);"> ESCANEAR </button><!-----ESCANER QR----
+<a onclick="abrirInfo()" class="botonatras" style="background-image: url(./assets/info.webp);"> ESCANEAR </a>
 
     </DIV>
-      <div id="reader"></div><!--------ESCANER QR-----------> 
-  <p id="result"></p><!---------ESCANER QR-------------> 
-
-
-
-
-
-
-
 
 <!-- Ventana emergente para INFO ---------------------------------------------------------->
 <div id="ventanaInfo" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999;">
@@ -861,9 +855,6 @@
     }
   }
 </script>
-
-<script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-
 
   </body>
 </html>
