--- a/galeria.html
+++ b/galeria.html
@@ -789,10 +789,11 @@
     </DIV>
 
 
+<div id="overlay">
   <div id="reader"></div>
   <p id="resultado"></p>
-
-
+  <button id="cerrar-overlay">CERRAR</button>
+</div>
 
 <!-- Ventana emergente para INFO ---------------------------------------------------------->
 <div id="ventanaInfo" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999;">
