--- a/galeria.html
+++ b/galeria.html
@@ -793,7 +793,10 @@
 <div id="overlay">
   <div id="reader"></div>
   <p id="resultado"></p>
-  <button id="cerrar-overlay">CERRAR</button>
+
+         <DIV class="contenedorbotoncerrar">
+          <button id="cerrar-overlay" class="botonatrasexpansiones">X</button>
+       </DIV>
 </div>
 
 <!-- Ventana emergente para INFO ---------------------------------------------------------->
