--- a/galeria.html
+++ b/galeria.html
@@ -784,7 +784,7 @@
     <DIV class="contenedorbotoncerrar">
   <a class="botonatras" onclick="abrirVentanaExpansiones()" style="background-image: url(./assets/expansiones.webp);"> EXPANSIONES </a>
       <a onclick="cerrarGaleriaDesdeIframe()" class="botonatras"> X </a>
-<button id="btn-abrir-escaner" class="botonatras" style="background-image: url(./assets/info.webp);"> ESCANEAR </button>
+<a id="btn-abrir-escaner" class="botonatras" style="background-image: url(./assets/qr.webp);"> ESCANEAR </a>
 
     </DIV>
 
